サンプルの構成を変更

--- a/notTidyHpInfo/html/subpages001/pages/c000tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c000tab000.html
@@ -4,11 +4,12 @@
 <meta charset="UTF-8">
 <title></title>
 <!-- ------------------------------------------------------------------------------- -->
-<link rel="stylesheet" href="../../css/magArt.css">
+<link rel="stylesheet" href="../../../css/magArt.css">
+<style type="text/css"><!-- body {overflow:hidden;} //--></style>
 <!-- syntaxhighlighter_3.0.83 -->
-<script type="text/javascript" src="../../libs/syntaxhighlighter_3.0.83/scripts/shCore.js"></script>
-<script type="text/javascript" src="../../libs/syntaxhighlighter_3.0.83/scripts/shBrushJScript.js"></script>
-<link type="text/css" rel="stylesheet" href="../../libs/syntaxhighlighter_3.0.83/styles/shCoreDefault.css"/>
+<script type="text/javascript" src="../../../libs/syntaxhighlighter_3.0.83/scripts/shCore.js"></script>
+<script type="text/javascript" src="../../../libs/syntaxhighlighter_3.0.83/scripts/shBrushJScript.js"></script>
+<link type="text/css" rel="stylesheet" href="../../../libs/syntaxhighlighter_3.0.83/styles/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
