--- a/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
+++ b/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
@@ -4,11 +4,12 @@
 <meta charset="UTF-8">
 <title>カテゴリサンプル</title>
 <!-- ------------------------------------------------------------------------------- -->
-<link rel="stylesheet" href="../../css/magArt.css">
+<link rel="stylesheet" href="../../../css/magArt.css">
+<style type="text/css"><!-- body {overflow:hidden;} //--></style>
 <!-- syntaxhighlighter_3.0.83 -->
-<script type="text/javascript" src="../../libs/syntaxhighlighter_3.0.83/scripts/shCore.js"></script>
-<script type="text/javascript" src="../../libs/syntaxhighlighter_3.0.83/scripts/shBrushJScript.js"></script>
-<link type="text/css" rel="stylesheet" href="../../libs/syntaxhighlighter_3.0.83/styles/shCoreDefault.css"/>
+<script type="text/javascript" src="../../../libs/syntaxhighlighter_3.0.83/scripts/shCore.js"></script>
+<script type="text/javascript" src="../../../libs/syntaxhighlighter_3.0.83/scripts/shBrushJScript.js"></script>
+<link type="text/css" rel="stylesheet" href="../../../libs/syntaxhighlighter_3.0.83/styles/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
@@ -19,12 +20,14 @@
 <li>タイトルは28文字以内
 <li>キーワードプランナーを使用
 </ul>
+<img/>
+<!--
 <h2>問題提起</h2>
-
 
 <h2>解決策提起</h2>
 
 <h2>解決策根拠</h2>
+ -->
 
 <h2>小見出し</h2>
 本文
@@ -40,6 +43,24 @@
 
 <h2>CTA</h2>
 広告とか。。。
+<!--
+<h2>小見出し</h2>
+<ul>
+<li>
+<li>
+	<ol>
+	<li>
+	<li>
+	<li>
+	</ol>
+<li>
+</ul>
+<h2>まとめ</h2>
+結論
+<h2>CTA</h2>
+広告とか。。。
+ -->
+
 
 </body>
 </html>
