アーキテクト記事の種

--- a/notTidyHpInfo/html/subpages001/pages/c001tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c001tab000.html
@@ -78,10 +78,28 @@
 </ul>
 
 <h2>アーキテクトはどんなことすればいいの？</h2>
-　ソフトウェアアーキテクチャの概要がわかったところで、では、開発時にその役割を担うソフトウェアアーキテクトの方々はどんな作業をされているのでしょうか。以下に書いていきます。<br>
-<h3>ソリューションを提案する</h3>
+　ソフトウェアアーキテクチャの概要がわかったところで、では、開発時にその役割を担うソフトウェアアーキテクトの方々はどんな作業をされているのでしょうか。<br>
+　いきなり、複雑な事を考えても理解が追い付かないので、とりあえず、大きく考えてみましょう。ソフトウェア開発の役割として、時代が進むにつれて、ソフトウェアそのものの複雑さと比例して、<strong class="bigfont_underline">開発の役割も複雑化</strong>しています。<br>
+　開発とは違うのですが、野球のピッチャーなどは、昔は完投が当然でルール上は交代はできても先発ピッチャーが基本的に１試合投げ切るのが当然でした。そして、いつの間にかリリーフ専門のピッチャーが登場し、さらに中継ぎ専門のピッチャーが出てきます。このように１つのポジションでも、試合を有利に進める為に役割の細分化が行われるのが世の常です。ただ、あまり無意味に複雑化しすぎるとそれはそれで弊害もありますが。<br>
+　まず、大昔（といっても50年～40年ほど前でしょうか）、ソフトウェア開発は、現在ほどのソースコード量も、複雑なフレームワークもなく、まるで計算式を書くかのように上から下へとコーディングしたものが、機械語にコンパイルされて動いていました。この頃にアーキテクトという言葉が浸透していたかどうかはわかりませんが、少なくともソフトウェアを製造するにあたってスキップできない部分なので、誰かが担っていたのでしょう。<br>
+　作成するものの規模が小さいという事は、工数もそほど大したものでもないのでしょう。
 
 
+<h2>具体的な進め方は？</h2>
+<ol>
+<li>アーキテクチャ要件の洗出し
+<li>機能的なアーキテクチャ設計
+<li>配置設計
+<li>製品の適用
+	<ul>
+	<li>プルーフ・オブ・コンセプト
+	</ul>
+<li>性能見積
+	<ul>
+	<li>ベンチマーク
+	</ul>
+<li>セキュリティ検討
+</ol>
 
 
 
@@ -115,6 +133,7 @@
 <li>https://ja.wikipedia.org/wiki/%E3%82%A2%E3%83%BC%E3%82%AD%E3%83%86%E3%82%AF%E3%83%81%E3%83%A3
 <li>https://ja.wikipedia.org/wiki/%E3%82%B3%E3%83%B3%E3%83%94%E3%83%A5%E3%83%BC%E3%82%BF%E3%83%BB%E3%82%A2%E3%83%BC%E3%82%AD%E3%83%86%E3%82%AF%E3%83%81%E3%83%A3
 <li>http://jibun.atmarkit.co.jp/lskill01/special/arc07/arc02.html
+<li>http://www.itmedia.co.jp/keywords/it_architecture_kandokoro.html
 </ul>
 
 </body>
