ブログ文追加

--- a/notTidyHpInfo/html/subpages001/pages/c001tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c001tab000.html
@@ -121,10 +121,33 @@
 　ここで、よく混乱するのが、「まとめ役」のアウトプットです。直接の生産作業をしてない「まとめ役」は一体何を残せばいいのでしょうか？<br>
 　「残す」という単語を使いましたが、正確には、「残す」前に大事なのは、「伝える事」です。「残す」という行為は、自分以外の人間に何かを伝える為の行為であるので、「残す」前に、<strong class="bigfont_underline">「誰に」「何を」伝えるか？</strong>という事を考えてみましょう。<br>
 <h3>伝える目的って何だっけ？</h3>
-　「伝える」事の大事さを考える前に、そもそも、「まとめ役」という役割は、何の
-　
-　
-　
+　「伝える」事の大事さを考える前に、そもそも、「まとめ役」という役割は、何の為にいるのかを考えると、実際の生産作業に参加しているわけではなく。生産を効率よく行う為に、生産作業を監視してそれが正しく行われているかを判断し、正しくない場合は、それを正して集団作業を正しい結果に導くというのが役割です。<br>
+　そうなると、監視上集める情報としては、「現在進行形でリアルタイムな情報」であり、「改善の余地はあるか」、かつ、「作業者のモチベーション」など、様々なインプットは想像に難くないが、肝心のアウトプットに関しては、割と曖昧な場合が多い。しかし、「まとめ役」という役割を考えると、その成果は、チームの状態そのものであって、これという形のあるものを生産するわけではない。<br>
+　では、「まとめ役」であるアーキテクトもアウトプットがなくてもいいのか？<br>
+<h3>「まとめ役」にもいろいろある</h3>
+　役割は「まとめ役」で、直接生産ではなくとも、マネージャとアーキテクトには決定的な違いがあります。それは、<strong class="bigfont_underline">生産物の製造に手を加える立場かどうか</strong>です。<br>
+　単純にスケジュール管理や人事管理などのチーム運営に関わるのであれば、前項のようにインプットを考える際に生産物を意識したものを考えなくてもよいのですが、アーキテクトは話が違います。同じ「まとめ役」とはいっても、「まとめる対象」が違うのです。<br>
+　じゃあ、アーキテクトが、まとめる対象とは何でしょう？、それは、<strong class="bigfont_underline">「生産物回りの環境」</strong>です。ちょっとややこしい表現になってしまいましたが、要するに、<strong class="bigfont_underline">「生産物をどのように組み立てるのかを決める設計図」</strong>です。<br>
+　まだ、わかりにくいですね。そもそも、生産の役割として、設計・製造・テストがあります。まぁ、製造とテストがアーキテクトと違う事はなんとなくわかると思います。しかし、設計に関しては、違いが分かりにくいですね。<br>
+<h3>「アーキテクチャ設計」と「普通の設計」って何が違うの？</h3>
+　では、建築物に例えてみましょう。<br>
+　まず、「普通の設計」とは、「部屋割り」「階段の段数」「部屋の窓の大きさ」「部屋の壁の模様」などです。まぁ、他にもいろいろあると思いますけど、思いつくままに書くとこんな感じです。<br>
+　で、「アーキテクチャ」とは、「建物をどこに建てるか？」「何階建てか？」「素材は木造か鉄筋か？」などです。<br>
+　どちらも一見、建築物を建てる際の設計における決定事項に見えますが、決定的な違いがあります。それは、<strong class="bigfont_underline">「建築を開始した後の変更コスト」</strong>です。<br>
+　例えば、「普通の設計」における「部屋割り」を例にとると、建築中に突然、この部屋とこの部屋をつなげて１つにしたいなどと仕様変更があった場合に、理論上は２つの部屋の間の壁を取り除くという追加作業が発生します。しかし、「建物をどこに建てるか？」において、突然、やっぱり違う住所にしたい場合はどうでしょう。その場合、その土地の調査などからやり直すとしたら、変更になった段階にもよりますが、とんでもない追加作業が発生する可能性があります。<br>
+　これらの考えをソフトウェアに置きかえても同じ事です。但し、どこまで大変な事かをアーキテクチャと呼ぶかは、未だに固定的な定義がなくケースバイケースです。<br>
+　しかし、「アーキテクチャ設計」と「設計」の関係は、<strong class="bigfont_underline">「アーキテクチャ設計」の土台の上に「設計」というブロックが置かれている構造</strong>になる事は普遍的です。<br>
+　なので、<strong class="bigfont_underline">「アーキテクチャ設計」と「設計」を分ける基準は、「変更コスト」で考えること</strong>で１つの基準になると思います。<br>
+<h3>「アーキテクチャ設計」の成果物は何ぞや？</h3>
+　ここで、議論の入り口に戻って、アーキテクトのアウトプットを考えてみましょう。<br>
+　まぁ、結局「設計」は「設計」ですので、結論を言えば、<strong class="bigfont_underline">生産物に関わる情報を図なり文なりでアウトプットし、設計・製造・テストなど生産に関わる全ての人に伝える</strong>必要があります。<br>
+　何故なら、そのアーキテクチャの土台の上で、全ての生産物が生産されるのですから。<br>
+<!--===============================================================================================================-->
+<h2>アーキテクチャ設計の具体的な進め方は？</h2>
+<h3></h3>
+
+
+
 
 
 
