目次作成中

--- a/notTidyHpInfo/html/subpages001/pages/c002tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c002tab000.html
@@ -14,21 +14,29 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>タイトル</h1>
+<h1>ｒ進数</h1>
+<!--
 <ul>
 <li>全体サイズとしては3000文字が目安
 <li>タイトルは28文字以内
 <li>キーワードプランナーを使用
 </ul>
-<h2>問題提起</h2>
+ -->
+<!-- <h2>問題提起</h2> -->
+　皆さんは、数を数える時はどのように数えますか？<br>
+　勿論、「１」「２」「３」と数えるでしょう。<strong class="bigfont_underline">数字は世界共通の言語</strong>でもあるわけですから当然の事だと思います。<br>
+　ところで沢山のものを数える場合はどうでしょう。数字は「０」から「９」までありますが、それを超える個数を数えて現す場合は、数字の種類が足りませんね。<br>
+　そこで<strong class="bigfont_underline">「桁」</strong>というものが登場します。<br>
+　まぁ、「０」は「存在しない」という事なんで、一旦置いといて「１」から「９」まで順番に使用した後で次にまた「１」に戻るなんて事になれば、頭の中で何回１を使ったのかを記憶する必要があります。<br>
+<!-- <h2>解決策提起</h2> -->
+　そこで、頭の中で記憶しなくてもいいように文字の種類を増やさない良い方法が「桁」というものですね。<br>
+　「１」から「９」まで使用した後、次は「１０」と一般的にはなってます。ここで、<strong class="bigfont_underline">「なってます」と、あえて言うのには訳があります</strong>が、後述します。こうして桁を増やす事で、数を表す文字の種類よりも多くの数を表現するのが可能になりました。<br>
+<!-- <h2>解決策根拠</h2> -->
+<h2>普段使っているのは、10進数</h2>
+　数字の種類は、１０種類あります。言わずもがな「０」「１」「２」「３」「４」「５」「６」「７」「８」「９」です。これを使って桁を増やし、理論上は無限の数を数える事ができます。<br>
+　先ほど、<strong class="bigfont_underline">「なってます」と、あえて言うのには訳があります</strong>と言いました。ここがポイントで、タイトルの「ｒ進数」に関係してきます。<br>
+　上記で説明した数は、１０個ごとに次の桁が増加していきます。例えば、「１」から数えて、１０個目には「１０」として桁が２つになります。
 
-
-<h2>解決策提起</h2>
-
-<h2>解決策根拠</h2>
-
-<h2>小見出し</h2>
-本文
 
 <h2>小見出し</h2>
 本文
