--- a/notTidyHpInfo/html/subpages001/readme.html
+++ b/notTidyHpInfo/html/subpages001/readme.html
@@ -43,7 +43,7 @@
 </div><!-- <div id="category001"> -->
 <div id="category002">
 <ul>
-<li><a href="#c002tab000" onclick="ChangeTab('c002tab000'); return false;">　</a>
+<li><a href="#c002tab000" onclick="ChangeTab('c002tab000'); return false;">r進数</a>
 <li><a href="#c002tab001" onclick="ChangeTab('c002tab001'); return false;">　</a>
 <li><a href="#c002tab002" onclick="ChangeTab('c002tab002'); return false;">　</a>
 </ul>
@@ -136,9 +136,9 @@ function ChangeCategory(categoryname) {
 	   document.getElementById(categoryname).style.display = 'block';
 }
 //デフォルトのカテゴリを選択
-ChangeCategory('category001');
+ChangeCategory('category002');
 //デフォルトのタブを選択
-ChangeTab('c001tab000');
+ChangeTab('c002tab000');
 </script>
 <!-- ------------------------------------------------------------------------------- -->
 </body>
