--- a/notTidyHpInfo/html/subpages002_ap/readme.html
+++ b/notTidyHpInfo/html/subpages002_ap/readme.html
@@ -41,10 +41,28 @@
 </div><!-- <div id="category000"> -->
 <div id="category001">
 <ul>
-<li>1.1　数値変換とデータ表現
-	<ul>
-	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
-	</ul>
+<li><B>1.1　数値変換とデータ表現</B>
+<li>
+<li>
+<li>1.1.3　負数の表現
+<li>1.1.4　あふれ(オーバーフロー)
+<li>1.1.5　固定小数点数表現
+<li>1.1.6　浮動小数点表現
+<li>1.1.7　誤差
+  <ul>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">1.1.1　r進法</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">1.1.2　正の整数の表現</a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;"></a>
+  </ul>
 <li>1.2　集合と論理
 	<ul>
 	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
@@ -53,23 +71,19 @@
 	<ul>
 	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
 	</ul>
-<li>
+<li>1.4　オートマトン
 	<ul>
 	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
 	</ul>
-<li>
+<li>1.5　形式言語
 	<ul>
 	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
 	</ul>
-<li>
+<li>1.6　グラフ理論
 	<ul>
 	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
 	</ul>
-<li>
-	<ul>
-	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
-	</ul>
-<li>
+<li>1.7　確率と統計
 	<ul>
 	<li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">　</a>
 	</ul>
