--- a/notTidyHpInfo/html/subpages001/readme.html
+++ b/notTidyHpInfo/html/subpages001/readme.html
@@ -63,34 +63,34 @@
 <!-- カテゴリ単位  -->
 <!--------------------------------------------------------------------------->
 <div id="category000">
-<div id="c000tab000"><iframe src="./pages/c000tab000.html" height="1999px"></iframe></div>
-<div id="c000tab001"><iframe src="./pages/c000tab001.html" height="1999px"></iframe></div>
-<div id="c000tab002"><iframe src="./pages/c000tab002.html" height="1999px"></iframe></div>
-<div id="c000tab003"><iframe src="./pages/c000tab003.html" height="1999px"></iframe></div>
+<div id="c000tab000"><iframe src="./pages/c000/c000tab000.html" height="1999px"></iframe></div>
+<div id="c000tab001"><iframe src="./pages/c000/c000tab001.html" height="1999px"></iframe></div>
+<div id="c000tab002"><iframe src="./pages/c000/c000tab002.html" height="1999px"></iframe></div>
+<div id="c000tab003"><iframe src="./pages/c000/c000tab003.html" height="1999px"></iframe></div>
 </div><!-- <div id="category000"> -->
 <!--------------------------------------------------------------------------->
 <!-- カテゴリ単位  -->
 <!--------------------------------------------------------------------------->
 <div id="category001">
-<div id="c001tab000"><iframe src="./pages/c001tab000.html" height="6999px"></iframe></div>
-<div id="c001tab001"><iframe src="./pages/c001tab001.html" height="1999px"></iframe></div>
-<div id="c001tab002"><iframe src="./pages/c001tab002.html" height="1999px"></iframe></div>
+<div id="c001tab000"><iframe src="./pages/c001/c001tab000.html" height="6999px"></iframe></div>
+<div id="c001tab001"><iframe src="./pages/c001/c001tab001.html" height="1999px"></iframe></div>
+<div id="c001tab002"><iframe src="./pages/c001/c001tab002.html" height="1999px"></iframe></div>
 </div><!-- <div id="category001"> -->
 <!--------------------------------------------------------------------------->
 <!-- カテゴリ単位  -->
 <!--------------------------------------------------------------------------->
 <div id="category002">
-<div id="c002tab000"><iframe src="./pages/c002tab000.html" height="1999px"></iframe></div>
-<div id="c002tab001"><iframe src="./pages/c002tab001.html" height="1999px"></iframe></div>
-<div id="c002tab002"><iframe src="./pages/c002tab002.html" height="1999px"></iframe></div>
+<div id="c002tab000"><iframe src="./pages/c002/c002tab000.html" height="1999px"></iframe></div>
+<div id="c002tab001"><iframe src="./pages/c002/c002tab001.html" height="1999px"></iframe></div>
+<div id="c002tab002"><iframe src="./pages/c002/c002tab002.html" height="1999px"></iframe></div>
 </div><!-- <div id="category002"> -->
 <!--------------------------------------------------------------------------->
 <!-- カテゴリ単位  -->
 <!--------------------------------------------------------------------------->
 <div id="category003">
-<div id="c003tab000"><iframe src="./pages/c003tab000.html" height="1999px"></iframe></div>
-<div id="c003tab001"><iframe src="./pages/c003tab001.html" height="1999px"></iframe></div>
-<div id="c003tab002"><iframe src="./pages/c003tab002.html" height="1999px"></iframe></div>
+<div id="c003tab000"><iframe src="./pages/c003/c003tab000.html" height="1999px"></iframe></div>
+<div id="c003tab001"><iframe src="./pages/c003/c003tab001.html" height="1999px"></iframe></div>
+<div id="c003tab002"><iframe src="./pages/c003/c003tab002.html" height="1999px"></iframe></div>
 </div><!-- <div id="category003"> -->
 <!--------------------------------------------------------------------------->
 </div><!-- <div id="content"> -->
@@ -136,9 +136,9 @@ function ChangeCategory(categoryname) {
 	   document.getElementById(categoryname).style.display = 'block';
 }
 //デフォルトのカテゴリを選択
-ChangeCategory('category002');
+ChangeCategory('category000');
 //デフォルトのタブを選択
-ChangeTab('c002tab000');
+ChangeTab('c000tab000');
 </script>
 <!-- ------------------------------------------------------------------------------- -->
 </body>
