テストサイト構成を再考、ヘッダをJSで共通化

--- a/notTidyHpInfo/html/subpages001/pages/c003/c003tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c003/c003tab000.html
@@ -8,28 +8,66 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>タイトル</h1>
+<h1>CentOSインストールをやってみよう</h1>
+<!--
 <ul>
 <li>全体サイズとしては3000文字が目安
 <li>タイトルは28文字以内
 <li>キーワードプランナーを使用
 </ul>
 <h2>問題提起</h2>
-
-
 <h2>解決策提起</h2>
-
 <h2>解決策根拠</h2>
+ -->
+<!-- ------------------------------------------------------------------------------- -->
+<h2>インストール</h2>
 
+<h3>デフォルトインストール</h3>
+基本的には以下の参照URLを見てデフォルトで進める。参考にしたURLは以下のような感じです。
+<ul>
+<li>http://d.hatena.ne.jp/yamap_55/20130111/1357915410
+<li>http://d.hatena.ne.jp/akihito_sado/20120226
+</ul>
+
+<h3>遭遇したエラー</h3>
+以下のようなメッセージに遭遇
+<pre class="brush: bash;">
+NET: Registered protocol family 2
+</pre>
+対応方法は以下のURLを参照するとうまくいく。<br>
+ACPIを有効化、IO ACPIを有効化にチェックを入れるとうまくいった。
+<ul>
+<li>http://m97087yh.seesaa.net/pages/user/m/article?article_id=129774237
+</ul>
+
+<!-- ------------------------------------------------------------------------------- -->
+<h2>ssh 作成</h2>
+以下のコマンドを実行する
+<pre class="brush: bash;">
+$ yum list installed lgrep sudo
+$ su -
+# visudo
+------
+a   ALL=(ALL)   ALL  ※追加%wheel ALL=(ALL)   ALL   ※コメントを外す
+------
+</pre>
+
+<!-- ------------------------------------------------------------------------------- -->
+<h2>操作系問題</h2>
+2画面以上で操作されている場合、メイン画面以外ではマウスがまともに動かない様子 - GUIとCUIの切り替え
+<ul>
+<li>http://m97087yh.seesaa.net/pages/user/m/article?article_id=129774237
+</ul>
+(ちょっとメモ)/etc/inittab → 3 に変更で、CUIとなる。
+
+
+<!-- ------------------------------------------------------------------------------- -->
 <h2>小見出し</h2>
 本文
 
-<h2>小見出し</h2>
-本文
 
-<h2>小見出し</h2>
-本文
 
+<!-- ------------------------------------------------------------------------------- -->
 <h2>まとめ</h2>
 結論
 
