--- a/notTidyHpInfo/html/subpages001/pages/c000/c000tab000.html
+++ b/notTidyHpInfo/html/subpages001/pages/c000/c000tab000.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title></title>
 <!-- ------------------------------------------------------------------------------- -->
-<SCRIPT src="../../../../js/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT src="../../../../js/commonHeaderSetting.js" ></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
@@ -31,6 +31,11 @@ G:\tools\java\jdk1.8.0_45\bin\javaw.exe
 -Dorg.eclipse.swt.browser.IEVersion=10001
 -Xmx1200m
 </pre>
+<h1>画像テスト(png)</h1>
+<img border="0" src="../../../../images/test.png" >
+<h1>画像テスト(jpeg)</h1>
+<img border="0" src="../../../../images/test.jpg" >
+
 </ul>
 </body>
 </html>
